@startuml

class container{}
class certificate{}
class ship{}
class shipData{}
class port_wharehouse{}
class roles{}
class employee{}
class cargoManifest{}
class truck{}
class truck_data

ship-->shipData
ship-->cargoManifest
ship--> port_wharehouse

container-->cargoManifest
container-->certificate

port_wharehouse-->truck
port_wharehouse-->employee_schedule

employee-->roles
employee-->employee_schedule

truck-->truck_data

@enduml